# Login-Form

./: .gitignore  CMakeLists.txt  CMakePresets.json  License.txt  README.md  Resources.qrc  Style.qss  resources.qrc  style.qss
Forms/: mainwindow.ui
Includes/: AnimatedLineEdit.h  mainwindow.h
Sources/: AnimatedLineEdit.cpp  main.cpp  mainwindow.cpp
Styles/: Dark.qss  Light.qss
